--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>4WA Apps</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/main.css')}}">
+    <link rel="stylesheet" href="css/main.css">
   </head>
 <body style="background-image:url('/static/images/blue sky.jpg');">
   <img src="\static\images\4WAiconJPG.jpg" style="float:left" width="200" height="122" alt="4WA Icon">
@@ -13,8 +13,8 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;by 4 Work Answers</h1>
       <strong><nav>
         <ul class="menu">
-          <li><a href="{{ url_for('home') }}"><u>Home</u></a></li>
-          <li><a href="{{ url_for('about') }}"><u>About</u></a></li>
+          <li><a href="home.html"><u>Home</u></a></li>
+          <li><a href="about.html"><u>About</u></a></li>
         </ul>
       </nav></strong>
     </div>
