--- a/home.html
+++ b/home.html
@@ -1,6 +1,7 @@
 {%extends "index.html"%}
 {%block content%}
 <div class="home">
+    <link rel="stylesheet" href="css/main.css">
   <hr>
   <h1 style="font-size:33px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Application Overview and Screen Shots</h1>
