--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
             thereby preventing completed-order inventory<br>from growing and limiting garment-rack space.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <b style="font-size:14px"><i>Note:</i> <a href="{{ url_for('about') }}" style="color:red"><u>About</u></a> page includes
+            <b style="font-size:14px"><i>Note:</i> <a href="about" style="color:red"><u>About</u></a> page includes
             screen shots of the app in action and info about its functions</b>
           </li>
           <br>
