--- a/about.html
+++ b/about.html
@@ -169,6 +169,14 @@
 </p>
 <br>
 <hr>
+<br>
+<br>
+  <h3 style="color:red">Text Message Format:&nbsp;</h3>
+<br>
+  <img src="static\images\Reminder SS.jpg" height="700" width="350" style="float:right" alt="Appointment text message">
+  <img src="static\images\Appt SS.jpg" height="700" width="350" style="float:right" alt="Pick-up reminder message">
+<br>
+<hr>
   <h3 style="color:red">Technology Enhancing Communication:&nbsp;</h3>
   <h3 style="margin-bottom:10px;color:black">Twilio</h3>
   <p>
