added pics inside paragraph

--- a/about.html
+++ b/about.html
@@ -170,11 +170,10 @@
 <br>
 <hr>
 <br>
-<br>
-  <h3 style="color:red">Text Message Format:&nbsp;</h3>
+ <p> <h3 style="color:red">Text Message Format:&nbsp;</h3> </p>
 <br>
   <img src="static\images\Reminder SS.jpg" height="700" width="350" style="float:right" alt="Appointment text message">
-  <img src="static\images\Appt SS.jpg" height="700" width="350" style="float:right" alt="Pick-up reminder message">
+  <img src="static\images\Appt SS.jpg" height="700" width="350" style="float:left" alt="Pick-up reminder message">
 <br>
 <hr>
   <h3 style="color:red">Technology Enhancing Communication:&nbsp;</h3>
