tried to change padding on text message images

--- a/about.html
+++ b/about.html
@@ -172,15 +172,8 @@
 <br>
  <p> <h3 style="color:red">Text Message Format:&nbsp;</h3> </p>
 <br>
-  <img src="static\images\Reminder SS.jpg" height="700" width="350" style="float:right" alt="Appointment text message">
-  <img src="static\images\Appt SS.jpg" height="700" width="350" style="float:left" alt="Pick-up reminder message">
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <img src="static\images\Reminder SS.jpg" height="700" width="350" style="padding:10px" alt="Appointment text message">
+  <img src="static\images\Appt SS.jpg" height="700" width="350" style="padding:10px" alt="Pick-up reminder message">
 <br>
 <br>
 <br>
