included figure statement in demo pics

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <hr>
   <h3 style="color:red">Application Functions:</h3>
   <br>
-<img src="\static\images\App used2.jpg" style="float:left" height="565" width="595" alt="Image of application in use.">
+<img src="\static\images\appointDemo.png" style="float:left" height="565" width="595" alt="Image of application in use.">
 <img src="\static\images\App functions used.jpg" style="float:right" height="565" width="595" alt="Image of application in use.">
 
 <p style="text-align:left;font-size:13px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
