added second demo pic

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <h3 style="color:red">Application Functions:</h3>
   <br>
 <img src="\static\images\appointDemo.png" style="float:left" height="565" width="595" alt="Image of application in use.">
-<img src="\static\images\App functions used.jpg" style="float:right" height="565" width="595" alt="Image of application in use.">
+<img src="\static\images\remDemo.png" style="float:right" height="565" width="595" alt="Image of application in use.">
 
 <p style="text-align:left;font-size:13px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
