--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h1 style="font-size:33px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Application Overview and Screen Shots</h1>
   <hr>
-  <img src="static\images\App unused2.jpg" height="565" width="595" style="padding:10px,float:right" alt="Appointments and Reminders user interface">
+  <img src="static\images\App unused2.jpg" height="565" width="595" style="float:right" alt="Appointments and Reminders user interface">
 
   <h4 style="float:left; font-size:23px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <b>The application has <i style="color:red; font-size:24px">3</i> main functions:</b></h4><br><br><br><br>
