--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       <li style="font-weight:bold; color:red">Send appointment confirmation and pick-up reminder text messages</li>
       <br>
         <ul>
-          <li>Use tailoring appointment entries(labeled: Name, Cell#, Date, Time) to send an
+          <li>Use tailoring appointment entries(labeled: Name, Cell#, Date, Time) to send<br>an
           appointment confimation text message to the customer.
           </li>
           <br>
-          <li>Use pick-up reminder entries(labeled: Name, Cell#, Date Ready, Ticket#(s)) to send a text message
-            to the customer reminding them that their order has been complete since the Ready Date.
+          <li>Use pick-up reminder entries(labeled: Name, Cell#, Date Ready, Ticket#(s)) to<br>send a text message
+            to the customer reminding them that their order has<br>been complete since the Ready Date.
           </li>
           <br>
           <li>Reduce the occurance of appointment no-shows and provide a courtesy to the customer.</li>
@@ -49,16 +49,16 @@
       <li style="font-weight:bold; color:red">Manage tailoring appointments made and pick-up reminders sent</li>
       <br>
         <ul>
-          <li>Records tailoring appointment and pick-up reminder data in text files and gives each
+          <li>Records tailoring appointment and pick-up reminder data in text files<br>and gives each
             appointment/reminder an indiviual ID number.
           </li>
           <br>
-          <li>Parse appointment or reminder data with a click of the View All Appointments or
+          <li>Parse appointment or reminder data with a click of the View All Appointments<br>or
             View All Reminders button, respectively.
           </li>
           <br>
-          <li>Remove a reminder or appointment by entering its unique ID number in the entry field labeled
-            Appt# or Rem# and clicking the Delete Appointment or Delete Reminder button.
+          <li>Remove a reminder or appointment by entering its unique ID number in the<br>entry field labeled
+            Appt# or Rem# and clicking the<br>Delete Appointment or Delete Reminder button.
           </li>
         </ul>
       <br>
