--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             to the customer reminding them that their order has<br>been complete since the Ready Date.
           </li>
           <br>
-          <li>Reduce the occurance of appointment no-shows and provide a courtesy to the customer.</li>
+          <li>Reduce the occurance of appointment no-shows and provide a courtesy to<br>the customer.</li>
         </ul>
       <br>
       <li style="font-weight:bold; color:red">Manage tailoring appointments made and pick-up reminders sent</li>
