--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
   <hr>
   <h3 style="color:red">Application Functions:</h3>
   <br>
+    <img src="static\images\mainFunctions.png" height="565" width="595" alt="Description of Apllication Purpose">
+  <br>
 <img src="\static\images\appointDemo.png" style="padding:30px" height="565" width="595" alt="Image of application in use.">
 <img src="\static\images\remDemo.png" style="padding:30px" height="565" width="595" alt="Image of application in use.">
 
