--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
 <div class="about">
     
   <hr>
-  <h1 style="font-size:33px" class="center">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  <h1 style="font-size:33px" class="center2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     About the Appointments and Reminders Application</h1>
   <hr>
-  <h3 style="color:red" class="center">Application Functions:</h3>
+  <h3 style="color:red" class="center2">Application Functions:</h3>
   <br>
     <img src="static\images\mainFunctions.png" class="center" height="895" width="695" alt="Description of Apllication Purpose">
   <br>
