--- a/about.html
+++ b/about.html
@@ -3,9 +3,7 @@
 <div class="about">
     
   <hr>
-  <h1 style="font-size:33px" class="center2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    About the Appointments and Reminders Application</h1>
+  <h1 style="font-size:33px" class="center2">About the Appointments and Reminders Application</h1>
   <hr>
   <h3 style="color:red" class="center2">Application Functions:</h3>
   <br>
