tried to add small margin to paragraphs

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
 </p>
 <br>
 <br>
-<p style="font-size:18px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In the above screenshots, you will notice four areas which have been highlighted in yellow. The highlight does not appear
+<p style="font-size:18px" class="center3">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; In the above screenshots, you will notice four areas which have been highlighted in yellow. The highlight does not appear
   in normal application functioning; it is only present in these screenshots to show the updates in the GUI
   during its functioning.
 <br>
