--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 <br>
 <hr>
 <br>
- <p> <h3 style="color:red">Text Message Format:&nbsp;</h3> </p>
+  <h3 style="color:red">Text Message Format:&nbsp;</h3> 
 
   <img src="static\images\Reminder SS.jpg" height="700" width="350" style="padding:150px" alt="Appointment text message">
   <img src="static\images\Appt SS.jpg" height="700" width="350" style="padding:150px" alt="Pick-up reminder message">
