--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <div class="about">
     
   <hr>
-  <h1 style="font-size:40px" class="center2">Appointments and Reminders Application</h1>
+  <h1 style="font-size:40px">Appointments and Reminders Application</h1>
   <hr>
   
   <br>
