added 4wa pic on title

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <div class="about">
     
   <hr>
-  <h1 style="font-size:40px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Appointments and Reminders Application</h1>
+  <h1 style="font-size:40px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Appointments and Reminders Application <img src="\static\images\4WAiconJPG.jpg" style="float:right" alt="4WA Icon"></h1>
   <hr>
   
   <br>
