tried adding blue sky pic to about page

--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" href="css/main.css">
-<div class="about">
+<div class="about" style="background-image:url('/static/images/blue sky.jpg');">
     
   <hr>
   <h1 style="font-size:40px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Appointments and Reminders Application <img src="\static\images\4WAiconJPG.jpg" style="float:right" alt="4WA Icon"></h1>
