--- a/about.html
+++ b/about.html
@@ -62,13 +62,13 @@
 </p>
 <br>
 <hr>
-  <h3 style="color:red">Text Message Format:&nbsp;</h3> 
+  <h3 style="color:red"><b>Text Message Format:</b>&nbsp;</h3> 
 
   <img src="static\images\Reminder SS.jpg" height="700" width="350" style="padding:150px" alt="Appointment text message">
   <img src="static\images\Appt SS.jpg" height="700" width="350" style="padding:150px" alt="Pick-up reminder message">
 <br>
 <hr>
-  <h3 style="color:red">Technology Enhancing Communication:&nbsp;</h3>
+  <h3 style="color:red"><b>Technology Enhancing Communication:</b>&nbsp;</h3>
   <h3 style="margin-bottom:10px;color:black">Twilio</h3>
   <p>
     <a href="https://www.twilio.com/">
