--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;by 4 Work Answers</h1>
       <strong><nav>
         <ul class="menu">
-          <li><a href="home"><u>Home</u></a></li>
+          <li><a href="index"><u>Home</u></a></li>
           <li><a href="about"><u>About</u></a></li>
         </ul>
       </nav></strong>
