connected facebook and decreased intro pic size

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<!--<a href="#" class="box style1"><img src="images/App unused2.jpg" alt="" /></a>-->
 								
 							
-							<!--<span class="box style1">--><img class="box style2" src="images/App unused2.jpg" style="float:left" height="360" width="385" alt="" /><!--</span>-->
+							<!--<span class="box style1">--><img class="box style2" src="images/App unused2.jpg" style="float:left" height="310" width="335" alt="" /><!--</span>-->
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
@@ -166,9 +166,9 @@
 						<!--	<hr /> -->
 							<h3>Find me on ...</h3>
 							<ul class="social">
-								<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="https://www.facebook.com/4workanswers" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="https://www.linkedin.com/in/robert-forwerck" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<!--	<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li> -->
 								<!--
 								<li><a href="#" class="icon solid fa-rss"><span>RSS</span></a></li>
 								<li><a href="#" class="icon brands fa-instagram"><span>Instagram</span></a></li>
